# simple-translate

./: CMakeLists.txt  README.md  index.html  params.json
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
debian/: changelog
src/: Assets.vala  DictionaryService.vala  GlobalSettings.vala  GlobalSettings.vala.in  JsonWebClient.vala  Main.vala.in  Settings.vala  Settings.vala.in  TranslatorApplication.vala  TranslatorService.vala  TranslatorWindow.vala  Utils.vala  WebJsonClient.vala
src/Yandex/: DictionaryService.vala  TranslationService.vala
